--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
     text-decoration: none;
     transition: opacity 0.2s ease-out;
     opacity: 0;
+    border-radius: 50%;
 }
 #back-to-top:hover {
     background: #e9ebec;
