--- a/style.css
+++ b/style.css
@@ -11,11 +11,11 @@
     color: #444;
     cursor: pointer;
     border: 0;
-    border-radius: 2px;
+    border-radius: 50%;
     text-decoration: none;
     transition: opacity 0.2s ease-out;
     opacity: 0;
-    border-radius: 50%;
+    box-shadow: 2px 2px 7px #000000a8;
 }
 #back-to-top:hover {
     background: #e9ebec;
